<resources>
    <string name="app_name">AYsMS</string>
    <string name="title_cancer_advice">Cancer Advice</string>
    <string name="title_chemo_advice">Chemotherapy Advice</string>
    <string name="title_end_of_treatment_advice">End of Treatment Advice</string>
    <string name="title_eating_well_advice">Eating Well Advice</string>
    <string name="title_what_is_cancer">What is cancer?</string>
    <string name="title_what_is_colorectal_cancer">What is colorectal cancer?</string>
    <string name="title_what_is_treatment_options">Treatment options</string>
    <string name="title_what_is_chemo">What is chemotherapy?</string>
    <string name="title_chemo_and_infections">Chemotherapy and infections</string>
    <string name="title_prevent_infections">How to prevent infections</string>
    <string name="title_what_to_tell_doctors">What to tell your doctors</string>
    <string name="title_end_of_treatment">End of treatment</string>
    <string name="title_once_treatment_is_over">Once treatment is over</string>
    <string name="title_worries_about_reoccurrence">Worries about reoccurrence</string>
    <string name="title_follow_up_care">Follow-Up Care</string>
    <string name="title_emotions_and_feelings">Emotions and Feelings</string>
    <string name="title_disturbed_sleep">Disturbed Sleep</string>
    <string name="title_fatigue">Fatigue</string>
    <string name="title_lifestyle_choices">Lifestyle Choices</string>
    <string name="title_environmental_factors">Environmental Factors</string>
    <string name="title_making_changes">Making Changes</string>
    <string name="title_before_after_surgery">Before and After Surgery</string>
    <string name="title_after_surgery">After Surgery</string>
    <string name="title_low_fibre_diets">Low Fibre and Low Residue Diets</string>
    <string name="title_foods_you_can_eat">Foods You Can Eat</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_setpasscode">Set Passcode</string>
    <string name="passcode_question1">Mother\'s maiden name</string>
    <string name="passcode_question2">Name of your first pet</string>
    <string name="passcode_question3">Dream job</string>
    <string name="passcode_label">Passcode</string>
    <string name="enter_passcode">Enter passcode</string>
    <string name="title_setpasscode_button">Set passcode</string>
    <string name="title_changepasscode_button">Update Settings</string>
    <string name="reenter_passcode">Re-enter passcode</string>
    <string name="change_settings_message">Please first enter your current passcode to change your settings</string>
    <string name="title_activity_passcode">Enter Passcode</string>
    <string name="what_is_cancer_advice"><Data><![CDATA[
        <p>Cancer starts in our cells. Cells are tiny building blocks that make up the organs and tissues of our body. Usually, these cells divide to make new cells in a controlled way. This is how our bodies grow, heal and repair.</p>
        <p>Sometimes, this goes wrong and the cell becomes abnormal. The abnormal cell keeps dividing and making more and more abnormal cells. These cells form a lump, which is called a tumour.</p>
        <p>Not all lumps are cancerous.</p>
        <ul>
        <li>A lump that is not cancerous (benign) cannot spread to anywhere else in the body.</li>
        <li>A lump that is cancer (malignant) can grow into surrounding tissue.</li>
        </ul>
        <p>Cancer cells sometimes break away from the primary cancer and travel through the blood or lymphatic system to other parts of the body. Cancer cells that spread and develop into a tumour somewhere else in the body are called a secondary cancer.</p>
        ]]> </Data>
    </string>
    <string name="what_is_colorectal_cancer_advice"><Data><![CDATA[
        <p>Bowel cancer is also known as Colorectal cancer or cancer of the colon or rectum. This may seem confusing but this is because the rectum and colon make up the large bowel:</p>
        <ul>
        <li>Colon cancer is a cancer that develops in the colon (large bowel) but excludes the rectum.</li>
        <li>Rectal cancer is a cancer that develops in the rectum (the very last part of the bowel before the anal opening).</li>
        </ul>
        <p>There are slight differences in the treatment pathway depending on whether your cancer is in the colon or rectum.</p>
        ]]> </Data>
    </string>
    <string name="what_is_treatment_options_advice"><Data><![CDATA[
        <p>Treatment for bowel cancer is decided by:</p>
        <ul>
        <li>where the cancer is in your bowel</li>
        <li>how big the tumour is</li>
        <li>the number, size and position of any tumours outside the bowel (including lymph nodes)</li>
        <li>the type of cancer cells – their cell type and genetic make-up</li>
        <li>your general health and fitness</li>
        <li>your wishes as the patient.</li>
        </ul>
        <p>It will also be determined by:</p>
        <ul>
        <li>the local and national guidelines for best practice in treating bowel cancer</li>
        <li>the availability of different treatment options within your local hospital</li>
        <li>the access to clinical trials available within your local hospital</li>
        <li>how well you respond to the treatment</li>
        <li>the impact of any side-effects you may experience as a result of treatment.</li>
        </ul>
        <p>Everyone is different and your treatment plans will be very individual to you. Your consultant and specialist nurse will discuss the options that are available to you, including where and when your treatment will take place. They will describe to you, step by step, what each stage of your plan might involve, the likely outcomes and who will be treating you.</p>
        ]]> </Data>
    </string>
    <string name="what_is_chemo_advice"><Data><![CDATA[
        <p><b>Chemotherapy means using drugs to kill cancer cells.</b></p>
        <p>The drugs are usually given by injection or drip into the veins ... but they may also be swallowed or injected under the skin.</p>
        <p>You may be given just one drug or a combination of drugs.</p>
        <p>You may have chemotherapy on its own or with other treatments such as surgery, radiotherapy or other drugs.</p>
        ]]> </Data>
    </string>
    <string name="chemotherapy_and_infections"><Data><![CDATA[
        <p>When you have chemotherapy your ability to fight infections may be seriously weakened. This is because most chemotherapy temporarily reduces the number of white cells in the blood.</p>
        <p>Using the Chemotherapy Assessment Chart on the My Symptoms page you can monitor any side effects and contact the helpline.</p>
        <p>The list below highlights some signs of infection to look out for:</p>
        <ul>
        <li>a raised temperature to about about 37.5C/100.4F</li>
        <li>uncontrollable shivering, chills or shaking</li>
        <li>a sore throat</li>
        <li>diarrhoea</li>
        <li>a cough or shortness of breath</li>
        <li>discomfort or burning when you pass urine</li>
        <li>a rash</li>
        <li>bruising or bleeding for no apparent reason.</li>
        </ul>
        <h5><colorRed>Please also contact your oncology team if you feel unwell in any other way.</colorRed></h5>
        <p>It is useful to keep a thermometer at home to check your temperature. It is also a good idea to carry one with you when you go out. You can buy one from the chemists.</p>
        <p>For more information on infections, check the advice on How to Prevent Infections.</p>
        ]]> </Data>
    </string>
    <string name="how_to_prevent_infections"><Data><![CDATA[
        <h5><colorRed>Try to avoid ...</colorRed></h5>
        <ul>
        <li>contact with anyone who has an obvious infection</li>
        <li>unpasteurised milk and cheese</li>
        <li>raw and undercooked eggs</li>
        <li>undercooked food, especially chicken and other meats</li>
        <li>take away foods</li>
        <li>changing nappies of children who have recently been vaccinated</li>
        <li>getting close to animals and their excreta, especially cat litter trays and bird cages (use gloves)</li>
        <li>gardening injuries (wear thick gloves).</li>
        </ul>
        <h5><colorRed>Always do these ...</colorRed></h5>
        <ul>
        <li>wash hands before you prepare or eat food</li>
        <li>wash and peel all fruit, vegetables and salads</li>
        <li>wash your hands after handling animals, fresh flowers or pot plants</li>
        <li>clean you teeth regularly (at least twice a day)</li>
        <li>use any mouthwashes your doctor has recommended</li>
        <li>ask your health professional if it is OK for you to drink alcohol</li>
        <li>a flu jab is a good idea - but discuss this, and other immunisations, with a health professional</li>
        <li>defrost food thoroughly.</li>
        </ul>
        <h5><colorRed>Remember ...</colorRed></h5>
        <h6><colorRed>If you think you have an infection it is very important that you contact your hospital immediately.</colorRed></h6>
        <p>You may need antibiotic treatment which should be received within 1 hour.</p>
        ]]> </Data>
    </string>
    <string name="what_to_tell_your_doctors"><Data><![CDATA[
        <h5><colorRed>Please tell your doctors if ...</colorRed></h5>
        <ul>
        <li><b>You have any new symptoms: </b>the sooner we know, the sooner we can treat them.</b></li>
        <li><b>You feel sick or vomit: </b>we can give you anti-sickness drugs.</b></li>
        <li><b>you get mouth ulcers</b></li>
        <li><b>You develop shingles or a cold sore: </b>if we catch these early, the treatment is more likely to work.</b></li>
        <li><b>You are planning a holiday: </b>we will try to fit your treatment around your plans - or we may help advise you not to travel. We can write to your insurers to help you get your holiday money back.</b></li>
       </ul>
        ]]></Data>
    </string>
    <string name="sex_pregnancy_family_planning"><Data><![CDATA[
        <p>Chemotherapy does not mean that you should not have sex - but you may not feel like it.</p>
        <p><b>If you are planning to have a family in the future,</b> tell your hospital doctor. Cancer treatment can reduce fertility, especially in men.</p>
        <p>Chemotherapy make some people infertile - either temporarily or permanently - but this is not always the case, <b>so continue to use your normal contraceptive during treatment.</b></p>
        <p><b>Avoid pregnancy during chemotherapy.</b> If you or your partner take certain chemotherapy drugs just before or during pregnancy they may harm the developing baby.</p>
        <p><b>If your period is late and you think you may be pregnant, tell your doctor straight away.</b></p>
        ]]></Data>
    </string>
</resources>