<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="60dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_passcode1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:background="@drawable/rounded_edittext"
            app:hintTextAppearance="@style/TextLabel">

            <EditText
                android:id="@+id/passcode1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_passcode"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:maxLength="4"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_passcode2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:background="@drawable/rounded_edittext"
            app:hintTextAppearance="@style/TextLabel">

            <EditText
                android:id="@+id/passcode2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reenter_passcode"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:maxLength="4"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:background="@drawable/rounded_edittext"
            app:hintTextAppearance="@style/TextLabel">

            <EditText
                android:id="@+id/passcode_question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passcode_question1"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:background="@drawable/rounded_edittext"
            app:hintTextAppearance="@style/TextLabel">

            <EditText
                android:id="@+id/passcode_question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passcode_question2"
                android:inputType="text"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:background="@drawable/rounded_edittext"
            app:hintTextAppearance="@style/TextLabel">

            <EditText
                android:id="@+id/passcode_question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passcode_question3"
                android:inputType="text"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/setPasscodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:background="@drawable/button"
            android:text="@string/title_setpasscode_button"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>

