<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/making_changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button"
                android:text="@string/title_making_changes"
                android:textColor="@color/white"
                android:onClick="giveAdvice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="" />

            <Button
                android:id="@+id/before_after_surgery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button"
                android:text="@string/title_before_after_surgery"
                android:textColor="@color/white"
                android:onClick="giveAdvice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="" />

            <Button
                android:id="@+id/after_surgery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button"
                android:text="@string/title_after_surgery"
                android:textColor="@color/white"
                android:onClick="giveAdvice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="" />

            <Button
                android:id="@+id/low_fibre_diets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button"
                android:text="@string/title_low_fibre_diets"
                android:textColor="@color/white"
                android:onClick="giveAdvice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="" />

            <Button
                android:id="@+id/foods_you_can_eat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button"
                android:text="@string/title_foods_you_can_eat"
                android:textColor="@color/white"
                android:onClick="giveAdvice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="" />

        </LinearLayout>


    <include
        android:layout_height="50dip"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        layout="@layout/footer"/>

</RelativeLayout>
