<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/what_is_chemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button"
                android:text="@string/title_what_is_chemo"
                android:textColor="@color/white"
                android:onClick="giveAdvice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="" />

            <Button
                android:id="@+id/chemo_and_infections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button"
                android:text="@string/title_chemo_and_infections"
                android:textColor="@color/white"
                android:onClick="giveAdvice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="" />

            <Button
                android:id="@+id/prevent_infections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button"
                android:text="@string/title_prevent_infections"
                android:textColor="@color/white"
                android:onClick="giveAdvice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="" />

            <Button
                android:id="@+id/what_to_tell_doctors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button"
                android:text="@string/title_what_to_tell_doctors"
                android:textColor="@color/white"
                android:onClick="giveAdvice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="" />

        </LinearLayout>

    <include
    android:layout_height="50dip"
    android:layout_width="match_parent"
    android:layout_alignParentBottom="true"
    layout="@layout/footer"/>

</RelativeLayout>